css fix on mobile

--- a/docs/_sass/pages/_post.scss
+++ b/docs/_sass/pages/_post.scss
@@ -4,8 +4,8 @@
   position: absolute;
   top: 400px;
   z-index: 233;
-  // width: 50%;
-  max-width: 1000px;
+  width: 100%;
+  // max-width: 1000px;
   padding: 20px 20px 0;
   -webkit-transform: translate3d(0,0,1px);
   transform: translate3d(0,0,1px);
@@ -14,7 +14,7 @@
   }
   @include media-query($medium-screen) {
     height: 100vh;
-    // overflow-y: scroll;
+    overflow-y: scroll;
     position: initial;
     top: 0;
   }
@@ -89,6 +89,7 @@ a.read-more {
 // Post content
 
 #post {
+  max-width: 1000px;
   padding-bottom: 50px;
   .post-header {
     margin: 0 auto 50px;
